name:               sirbeerus-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.9 && <5
                  , hakyll >= 4.15.1.1
		  


  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
